# sindie

./: .env.example  .gitignore  EVALS.md  LICENSE  PROMPT.md  README.md  pyproject.toml
evals/: README.md  __init__.py  sindie.py
evals/cases/grida/: README.md
evals/cases/grida/coffee-poster/: case.json  provenance.json
evals/cases/grida/icon-grid/: case.json  provenance.json
evals/cases/grida/kinetic-mobile/: case.json  provenance.json
evals/cases/grida/punk-poster/: case.json  provenance.json
evals/cases/smoke/: case.json
scripts/: readme-cover.html  render-readme-cover.sh
src/sindie/: __init__.py  cases.py  cli.py  prompt.py  scoring.py  validation.py
tests/: test_cases.py  test_inspect_task.py  test_prompt.py  test_scoring.py  test_validation.py
