[project]
name = "sindie-eval"
version = "0.1.0"
description = "Intent-aware multimodal evaluation harness for the Sindie design-review prompt"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "inspect-ai>=0.3.246",
  "jsonschema>=4.26.0",
  "openai>=2.45.0",
]

[project.scripts]
sindie-eval = "sindie.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sindie"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
